src/test/deca/context/invalid/objet/cast-void-something.deca
// Description:
//    Cast with void T1
//
// Resultats:
//    Ligne 10: Unable to cast type "int" to "void"
// Historique:
//    cree le 06/01/2023

{
    (int)((void)(1));
}